循环队列实现

--- a/ds/src/makefile
+++ b/ds/src/makefile
@@ -36,6 +36,7 @@ OBJS       =    $(OUTPUT_DIR)/adlist.o        \
                 ${OUTPUT_DIR}/heap.o          \
                 ${OUTPUT_DIR}/darray.o        \
                 ${OUTPUT_DIR}/stack.o         \
+                ${OUTPUT_DIR}/queue.o         \
 
 
 $(OUTPUT_DIR)/%.o: %.cpp
