--- a/ds/src/makefile
+++ b/ds/src/makefile
@@ -39,7 +39,8 @@ OBJS       =    $(OUTPUT_DIR)/adlist.o        \
                 ${OUTPUT_DIR}/queue.o         \
                 ${OUTPUT_DIR}/heap.o          \
                 ${OUTPUT_DIR}/priority_queue.o \
-                ${OUTPUT_DIR}/tree.o           \
+                ${OUTPUT_DIR}/tree.o          \
+                ${OUTPUT_DIR}/trie.o          \
 
 
 $(OUTPUT_DIR)/%.o: %.cpp
